--- a/index.html
+++ b/index.html
@@ -4,37 +4,27 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Photo Booth @saphasena68</title>
-<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
   :root{
-    --frame-blue: #bfeeff;
-    --accent-yellow: #ffd54f;
-    --card-bg: #ffffff;
-    --shadow: 0 8px 20px rgba(0,0,0,0.15);
-    --radius: 16px;
-    --text: #0b3b5a;
+    --frame-blue:#bfeeff;
+    --accent-yellow:#ffd54f;
+    --card-bg:#ffffff;
+    --shadow:0 8px 20px rgba(0,0,0,0.15);
+    --radius:16px;
+    --text:#0b3b5a;
   }
   html,body{
-    height:100%;
-    margin:0;
-    font-family:"Itim", cursive;
-    background:#f3f7fb;
-    color:var(--text);
+    height:100%;margin:0;
+    font-family:"Quicksand","Kanit","Inter",sans-serif;
+    background:#f3f7fb;color:var(--text);
   }
   .wrap{min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px;box-sizing:border-box;}
-  .booth{
-    width:380px;
-    background:linear-gradient(180deg,var(--card-bg),#f7fbff);
-    border-radius:18px;
-    box-shadow:var(--shadow);
-    padding:14px;
-  }
+  .booth{width:380px;background:linear-gradient(180deg,var(--card-bg),#f7fbff);border-radius:18px;box-shadow:var(--shadow);padding:14px;}
   .title{text-align:center;font-weight:700;font-size:18px;margin-bottom:8px;color:var(--text);}
-  .frame-preview{
-    width:100%;background:var(--frame-blue);border-radius:12px;padding:8px;box-sizing:border-box;
-    position:relative;overflow:hidden;aspect-ratio:2/3;display:flex;align-items:center;justify-content:center;
-  }
+  .frame-preview{width:100%;background:var(--frame-blue);border-radius:12px;padding:8px;box-sizing:border-box;position:relative;overflow:hidden;aspect-ratio:2/3;display:flex;align-items:center;justify-content:center;}
   #video{width:92%;border-radius:8px;background:black;transform:scaleX(-1);}
+  .countdown{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;font-size:64px;font-weight:900;color:rgba(255,255,255,0.95);text-shadow:0 6px 18px rgba(0,0,0,0.5);pointer-events:none;}
   .controls{margin-top:12px;display:flex;gap:8px;justify-content:center;}
   button{background:var(--accent-yellow);border:0;padding:8px 12px;border-radius:10px;font-weight:700;cursor:pointer;box-shadow:0 4px 10px rgba(0,0,0,0.12);}
   button.secondary{background:#e6f3ff;color:var(--text);font-weight:600;}
@@ -42,38 +32,33 @@
   .thumb-row{width:92%;display:flex;gap:8px;justify-content:space-between;}
   .thumb{width:30%;background:white;border-radius:8px;overflow:hidden;height:80px;display:flex;align-items:center;justify-content:center;box-shadow:0 6px 14px rgba(10,30,60,0.06);}
   .thumb img{width:100%;height:100%;object-fit:cover;border-radius:8px;}
-  .countdown{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;font-size:64px;font-weight:900;color:rgba(255,255,255,0.95);text-shadow:0 6px 18px rgba(0,0,0,0.5);pointer-events:none;}
   .small-note{font-size:12px;color:#334e6b;text-align:center;margin-top:8px;}
   .actions{display:flex;gap:8px;justify-content:center;margin-top:8px;}
   .download-btn{background:#4d9cff;color:white;padding:8px 10px;border-radius:10px;border:0;font-weight:700;}
-  @media (min-width:700px){.booth{width:480px;}}
+  @media(min-width:700px){.booth{width:480px;}}
 </style>
 </head>
 <body>
 <div class="wrap">
-  <div class="booth" role="application" aria-label="photo booth">
+  <div class="booth">
     <div class="title">Photo Booth @saphasena68</div>
-
     <div class="frame-preview" id="framePreview">
       <video id="video" autoplay playsinline></video>
       <div class="countdown" id="countdown" style="display:none;"></div>
-      <!-- ดาวตกแต่ง -->
-      <svg style="position:absolute;left:6px;top:8px;opacity:0.9" width="48" height="48" viewBox="0 0 24 24"><path d="M12 2l2.5 6 6.5.5-5 4 1.5 6-5.5-3.5L6 19l1.5-6-5-4 6.5-.5L12 2z" fill="#ffd54f"/></svg>
-      <svg style="position:absolute;right:10px;bottom:12px;opacity:0.9" width="32" height="32" viewBox="0 0 24 24"><path d="M12 2l2.5 6 6.5.5-5 4 1.5 6-5.5-3.5L6 19l1.5-6-5-4 6.5-.5L12 2z" fill="#ffd54f"/></svg>
+      <!-- ดาวเพิ่มเยอะๆ -->
+      <div id="stars"></div>
     </div>
-
     <div class="controls">
       <button id="startBtn">เริ่มถ่าย (3 รูป)</button>
       <button id="retakeBtn" class="secondary">เริ่มใหม่</button>
     </div>
-
-    <div class="thumbs" aria-live="polite">
+    <div class="thumbs">
       <div class="thumb-row">
         <div class="thumb" id="t1"><span style="opacity:0.45;">1</span></div>
         <div class="thumb" id="t2"><span style="opacity:0.45;">2</span></div>
         <div class="thumb" id="t3"><span style="opacity:0.45;">3</span></div>
       </div>
-      <div class="small-note">ภาพตัวอย่าง 3 ช่อง (แนวตั้ง) • ขนาดส่งออก 4×6 นิ้ว (1200×1800 px)</div>
+      <div class="small-note">ภาพตัวอย่าง 3 ช่อง (แนวตั้ง) • ขนาดส่งออก 4×6 นิ้ว</div>
       <div class="actions">
         <button id="downloadBtn" class="download-btn">ดาวน์โหลด 4x6</button>
       </div>
@@ -83,126 +68,123 @@
 
 <script>
 (async function(){
-  const video = document.getElementById('video');
-  const startBtn = document.getElementById('startBtn');
-  const retakeBtn = document.getElementById('retakeBtn');
-  const countdownEl = document.getElementById('countdown');
-  const thumbs = [document.getElementById('t1'),document.getElementById('t2'),document.getElementById('t3')];
-  let captures = [null,null,null];
+  const video=document.getElementById('video');
+  const startBtn=document.getElementById('startBtn');
+  const retakeBtn=document.getElementById('retakeBtn');
+  const countdownEl=document.getElementById('countdown');
+  const thumbs=[document.getElementById('t1'),document.getElementById('t2'),document.getElementById('t3')];
+  let captures=[null,null,null];
+
+  // ใส่ดาวเล็กใหญ่ไม่ทับ video
+  const starContainer=document.getElementById('stars');
+  function createStars(n=15){
+    for(let i=0;i<n;i++){
+      const star=document.createElement('div');
+      const size=Math.random()*14+6; // 6-20px
+      star.style.width=star.style.height=size+'px';
+      star.style.background='#ffd54f';
+      star.style.clipPath='polygon(50% 0%,61% 35%,98% 35%,68% 57%,79% 91%,50% 70%,21% 91%,32% 57%,2% 35%,39% 35%)';
+      star.style.position='absolute';
+      star.style.top=Math.random()*90+'%';
+      star.style.left=Math.random()*90+'%';
+      star.style.opacity=0.9;
+      starContainer.appendChild(star);
+    }
+  }
+  createStars(20);
 
   async function startCamera(){
     try{
-      const stream = await navigator.mediaDevices.getUserMedia({ video:{ facingMode:"user" }, audio:false });
-      video.srcObject = stream;
-      await video.play();
-    }catch(err){ alert('เปิดกล้องไม่สำเร็จ'); console.error(err); }
+      const stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"user"},audio:false});
+      video.srcObject=stream; await video.play();
+    }catch(err){alert('เปิดกล้องไม่สำเร็จ');}
   }
   await startCamera();
 
-  function showCountdown(n){ countdownEl.style.display='flex'; countdownEl.textContent=n; }
-  function hideCountdown(){ countdownEl.style.display='none'; }
+  function showCountdown(n){countdownEl.style.display='flex';countdownEl.textContent=n;}
+  function hideCountdown(){countdownEl.style.display='none';}
 
   function captureFrame(){
-    const vw = video.videoWidth, vh = video.videoHeight;
-    const canvas = document.createElement('canvas');
-    canvas.width = vw; canvas.height = vh;
-    const ctx = canvas.getContext('2d');
-    ctx.translate(vw,0); ctx.scale(-1,1);
+    const vw=video.videoWidth,vh=video.videoHeight;
+    const canvas=document.createElement('canvas');
+    canvas.width=vw;canvas.height=vh;
+    const ctx=canvas.getContext('2d');
+    ctx.translate(vw,0);ctx.scale(-1,1);
     ctx.drawImage(video,0,0,vw,vh);
     return canvas.toDataURL('image/png');
   }
 
   async function takeThreeShots(){
-    startBtn.disabled = true; retakeBtn.disabled = true;
-    captures = [null,null,null]; thumbs.forEach((el,i)=>el.innerHTML=`<span style="opacity:0.45;">${i+1}</span>`);
+    startBtn.disabled=true;retakeBtn.disabled=true;
+    captures=[null,null,null];
+    thumbs.forEach((el,i)=>el.innerHTML=`<span style="opacity:0.45;">${i+1}</span>`);
     for(let i=0;i<3;i++){
-      for(let s=3;s>=1;s--){ showCountdown(s); await new Promise(r=>setTimeout(r,800)); }
+      for(let s=3;s>=1;s--){showCountdown(s);await new Promise(r=>setTimeout(r,800));}
       hideCountdown();
-      const flash=document.createElement('div');
-      flash.style.position='absolute';flash.style.inset='0';flash.style.background='white';flash.style.opacity='0.95';flash.style.transition='opacity 170ms';document.body.appendChild(flash);
-      setTimeout(()=>{flash.style.opacity='0';setTimeout(()=>flash.remove(),200);},120);
-      const data=captureFrame(); captures[i]=data;
-      thumbs[i].innerHTML=`<img src="${data}" alt="thumb${i+1}">`;
-      await new Promise(r=>setTimeout(r,500));
+      const data=captureFrame();captures[i]=data;
+      thumbs[i].innerHTML=`<img src="${data}">`;
+      await new Promise(r=>setTimeout(r,400));
     }
-    startBtn.disabled = false; retakeBtn.disabled = false;
+    startBtn.disabled=false;retakeBtn.disabled=false;
   }
-
   startBtn.addEventListener('click',takeThreeShots);
   retakeBtn.addEventListener('click',()=>{captures=[null,null,null];thumbs.forEach((el,i)=>el.innerHTML=`<span style="opacity:0.45;">${i+1}</span>`);});
 
-  // วาดดาว
+  // ฟังก์ชันวาดกรอบดาวเวลา export
   function drawStar(ctx,x,y,r,color){
     ctx.save();ctx.fillStyle=color;ctx.beginPath();
-    for(let i=0;i<5;i++){
-      const a=(Math.PI*2*i)/5-Math.PI/2;
-      ctx.lineTo(x+Math.cos(a)*r,y+Math.sin(a)*r);
-      const ia=a+Math.PI/5;
-      ctx.lineTo(x+Math.cos(ia)*r*0.5,y+Math.sin(ia)*r*0.5);
-    }
+    for(let i=0;i<5;i++){const a=(Math.PI*2*i)/5-Math.PI/2;ctx.lineTo(x+Math.cos(a)*r,y+Math.sin(a)*r);const ia=a+Math.PI/5;ctx.lineTo(x+Math.cos(ia)*r*0.5,y+Math.sin(ia)*r*0.5);}
     ctx.closePath();ctx.fill();ctx.restore();
   }
-  function roundRect(ctx,x,y,w,h,r,fill,stroke){
-    ctx.beginPath();
-    ctx.moveTo(x+r,y);
-    ctx.arcTo(x+w,y,x+w,y+h,r);
-    ctx.arcTo(x+w,y+h,x,y+h,r);
-    ctx.arcTo(x,y+h,x,y,r);
-    ctx.arcTo(x,y,x+w,y,r);
-    ctx.closePath();
-    if(fill)ctx.fill();
-    if(stroke)ctx.stroke();
-  }
+  function roundRect(ctx,x,y,w,h,r,fill,stroke){ctx.beginPath();ctx.moveTo(x+r,y);ctx.arcTo(x+w,y,x+w,y+h,r);ctx.arcTo(x+w,y+h,x,y+h,r);ctx.arcTo(x,y+h,x,y,r);ctx.arcTo(x,y,x+w,y,r);ctx.closePath();if(fill)ctx.fill();if(stroke)ctx.stroke();}
   function drawImageInFrame(ctx,imgSrc,x,y,w,h,r){
     return new Promise((resolve,reject)=>{
       const img=new Image();
       img.onload=function(){
         ctx.save();roundRect(ctx,x,y,w,h,r,false,false);ctx.clip();
         const ratio=Math.max(w/img.width,h/img.height);
-        const nw=img.width*ratio, nh=img.height*ratio;
-        const dx=x+(w-nw)/2, dy=y+(h-nh)/2;
-        ctx.drawImage(img,dx,dy,nw,nh);ctx.restore();
-        resolve();
-      };
-      img.onerror=reject;img.src=imgSrc;
+        const nw=img.width*ratio,nh=img.height*ratio;
+        const dx=x+(w-nw)/2,dy=y+(h-nh)/2;
+        ctx.drawImage(img,dx,dy,nw,nh);ctx.restore();resolve();
+      };img.onerror=reject;img.src=imgSrc;
     });
   }
 
-  document.getElementById('downloadBtn').addEventListener('click',async ()=>{
+  document.getElementById('downloadBtn').addEventListener('click',async()=>{
     if(!captures.some(c=>c)){alert('ยังไม่ได้ถ่ายภาพ');return;}
-    const finalW=1200, finalH=1800;
+    const finalW=1200,finalH=1800;
     const canvas=document.createElement('canvas');canvas.width=finalW;canvas.height=finalH;
     const ctx=canvas.getContext('2d');
     ctx.fillStyle='#bfeeff';ctx.fillRect(0,0,finalW,finalH);
 
-    const margin=60;const innerX=margin;const innerY=margin+60;
-    const innerW=finalW-margin*2;const innerH=finalH-innerY-margin;
-    ctx.fillStyle='#ffffff';roundRect(ctx,innerX,innerY,innerW,innerH,20,true,false);
+    const margin=60,innerX=margin,innerY=margin+60;
+    const innerW=finalW-margin*2,innerH=finalH-innerY-margin;
+    ctx.fillStyle='#fff';roundRect(ctx,innerX,innerY,innerW,innerH,20,true,false);
 
-    ctx.fillStyle='#08324d';ctx.font='bold 52px "Itim", cursive';ctx.textAlign='center';ctx.textBaseline='middle';
-    ctx.fillText('Photo Booth @saphasena68',finalW/2,margin+28);
+    ctx.fillStyle='#08324d';ctx.font='700 52px Quicksand';ctx.textAlign='center';ctx.textBaseline='middle';
+    ctx.fillText('Photo Booth @saphasena68',finalW/2,margin+20);
 
-    const gutter=18;const photoX=innerX+28;const photoW=innerW-56;
+    const gutter=20,photoX=innerX+28,photoW=innerW-56;
     const singleH=Math.floor((innerH-gutter*2-56)/3);
     let y=innerY+28;
     for(let i=0;i<3;i++){
-      ctx.fillStyle='#e9f6ff';roundRect(ctx,photoX,y,photoW,singleH,12,true,false);
-      if(captures[i]){
-        await drawImageInFrame(ctx,captures[i],photoX,y,photoW,singleH,12);
-      }
-      ctx.strokeStyle='#ffffff';ctx.lineWidth=8;roundRect(ctx,photoX+6,y+6,photoW-12,singleH-12,9,false,true);
-
-      // ⭐ ดาวเล็กๆในแต่ละกรอบ
-      for(let s=0;s<6;s++){
-        let sx=photoX+Math.random()*photoW;
-        let sy=y+Math.random()*singleH;
-        drawStar(ctx,sx,sy,6,'#ffd54f');
-      }
-
+      ctx.fillStyle='#e9f6ff';roundRect(ctx,photoX,y,photoW,singleH,14,true,false);
+      if(captures[i]) await drawImageInFrame(ctx,captures[i],photoX,y,photoW,singleH,14);
+      ctx.strokeStyle='#fff';ctx.lineWidth=8;roundRect(ctx,photoX+6,y+6,photoW-12,singleH-12,10,false,true);
       y+=singleH+gutter;
     }
 
-    ctx.fillStyle='#3b6b85';ctx.font='20px "Itim", cursive';ctx.fillText('พิมพ์ขนาด 4x6 นิ้ว • Photo Booth',finalW/2,finalH-30);
+    // กระจายดาวสุ่ม (รอบกรอบไม่ทับรูป)
+    for(let i=0;i<25;i++){
+      const r=Math.random()*18+6;
+      const x=Math.random()*finalW;
+      const yPos=Math.random()*finalH;
+      // กันไม่ให้ทับรูป (โซนกลาง)
+      if(x>photoX-40 && x<photoX+photoW+40 && yPos>innerY-20 && yPos<innerY+innerH+20) continue;
+      drawStar(ctx,x,yPos,r,'#ffd54f');
+    }
+
+    ctx.fillStyle='#3b6b85';ctx.font='18px Quicksand';ctx.fillText('พิมพ์ขนาด 4x6 นิ้ว • Photo Booth',finalW/2,finalH-30);
 
     const a=document.createElement('a');a.href=canvas.toDataURL('image/png');a.download='photobooth_4x6.png';a.click();
   });
